        Reviewed by Adam.

http://bugs.webkit.org/show_bug.cgi?id=13472
        Misparsing date in javascript leads to year value of -1
        http://bugs.webkit.org/show_bug.cgi?id=14176
        Some date values not handled consistently with IE/Firefox

        Allow an optional comma between month and year, and year and time.



Canonical link: https://commits.webkit.org/20444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26454 268f45cc-cd09-0410-ab3c-d52691b4dbfc